# opengl-playground

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
app/: main.cpp  print_gl_error.cpp  print_gl_error.hpp  shader.cpp  shader.hpp
materials/: quad_frag.glsl  quad_vert.glsl
